# michelia-lib

./: .gitignore  Cargo.toml  Makefile  README.md
components/golang/michelia-lib/: Makefile
components/golang/michelia-lib/proto-golang/v0/: common.pb.go  element.pb.go  record.pb.go  vector.pb.go  version.pb.go  wise.pb.go
components/rust/michelia-lib/: Cargo.toml  build.rs
components/rust/michelia-lib/src/: lib.rs
components/rust/michelia-lib/src/proto-rs/v0/: mechelia.v0.rs
protos/: common.proto  element.proto  record.proto  vector.proto  version.proto  wise.proto
