[package]
name = "michelia-lib"
version = "0.0.1"
description = "michelia common lib"
edition = "2021"
license = "MIT/Apache-2.0"
readme = "README.md"
publish = false

[dependencies]
prost = "0.11"
tonic = "0.9.2"
prost-types = { version = "0.11", optional = true }
async-trait = "0.1"
tabwriter = "1.2.1"

[build-dependencies]
tonic-build = "0.9.2"
